freebsd-glue (0.2.5) UNRELEASED; urgency=low

  * Include libbsdxml.so in freebsd-glue.

 -- Robert Millan <rmh@debian.org>  Tue, 03 Dec 2013 22:28:21 +0100

freebsd-glue (0.2.4) unstable; urgency=low

  * Remove libutil glue code, depend on the real thing instead.

 -- Robert Millan <rmh@debian.org>  Sun, 01 Dec 2013 12:58:10 +0100

freebsd-glue (0.2.3) unstable; urgency=low

  * Only install *.so symlink for libfreebsd-glue.

 -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 13:08:07 +0100

freebsd-glue (0.2.2) unstable; urgency=low

  * Add strnstr().
  * setfstab: Only fail when file != NULL. Set errno when failing.
  * Provide libbsdxml stubs (for libexpat).

 -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 12:09:03 +0100

freebsd-glue (0.2.1) unstable; urgency=low

  * Fix broken external references in mac_set.c.

 -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 18:38:51 +0100

freebsd-glue (0.2.0) experimental; urgency=low

  * Provide a shared version of libfreebsd-glue.

 -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 14:05:57 +0100

freebsd-glue (0.1.15) unstable; urgency=low

  * Add INADDR_ALLRPTS_GROUP, INADDR_CARP_GROUP, INADDR_PFSYNC_GROUP and
    INADDR_ALLMDNS_GROUP magic IPv4 addresses.
  * Add the mac_* family of functions (as defined by <sys/mac.h>.
  * Move <sys/stdint.h> to <stdint.h>.
  * Add <sys/stdint.h> (as #include stub).
  * Add _PATH_DEVZERO.
  * Split additions for libcrypt, libutil and libz into separate
    libraries.
  * Add getbootfile().
  * Add <ndbm.h> stub (for libgdbm).
  * Add <sys/file.h> (stub for <sys/kglue/sys/file.h>).
  * Add <sys/user.h> and <sys/proc.h>.
  * Add _PATH_UUCPLOCK (diverge from upstream as per FHS).
  * Add mac_set family of functions.
  * Update copyright information.

 -- Robert Millan <rmh@debian.org>  Sun, 24 Nov 2013 14:22:23 +0100

freebsd-glue (0.1.14) unstable; urgency=low

  * Redirect to native <machine/elf.h> on kFreeBSD.